adding more text

--- a/vimp_plus_sl.Rmd
+++ b/vimp_plus_sl.Rmd
@@ -1062,9 +1062,9 @@ get_immunoassay_set <- function(vec) {
 
 ```
 
-The following code runs the full Super Learner. We originally ran this code on a high-performance cluster (HPC) computer, and do not reproduce the results here.
+The following code runs the full Super Learner with a reduced library of candidate learners. This is for illustration only --- we recommend using a large library of candidate learners, as we did in the original analysis. The code to reproduce the results of the original analysis is provided in the Appendix, and was designed to run on a high-performance cluster (HPC) computer (it takes multiple hours to run).
 
-```{r run-full-sl, eval = FALSE}
+```{r run-full-sl-with-small-lib, eval = FALSE}
 ## load required libraries and functions
 library("methods")
 library("SuperLearner")
@@ -1143,14 +1143,13 @@ set.seed(4747)
 seeds <- round(runif(10, 1000, 10000)) # average over 10 random starts
 fits <- parallel::mclapply(seeds, FUN = run_cv_sl_once, Y = Y_vaccine, X_mat = X_vaccine, family = "binomial",
               obsWeights = weights_vaccine,
-              sl_lib = SL_library_with_assay_groups, # this comes from sl_screens.R
+              sl_lib = SL_library_with_assay_groups[2], 
               method = "method.CC_nloglik",
               cvControl = list(V = V_outer, stratifyCV = TRUE),
               innerCvControl = list(list(V = V_inner)),
               vimp = FALSE,
               mc.cores = num_cores
 )
-saveRDS(fits, "sl_fits.rds")
 ```
 
 ### Variable Importance
@@ -1164,61 +1163,9 @@ We use the `vimp` package to compute variable importance estimates and confidenc
 library("vimp")
 ```
 
-We next ran multiple Super Learners with reduced sets of covariates. Again, we originally ran this code on an HPC computer. However, in the code below, we have indicated the line that may be edited to run the code locally:
+We next ran multiple Super Learners with reduced sets of covariates. Again, we originally ran this code on an HPC computer, and recommend that any final analyses use the full library of candidate learners. However, in the code below, we use a smaller library for illustration.
 
-```{r run-assays, eval = FALSE}
-## load required libraries and functions
-library("methods")
-library("SuperLearner")
-# library("future")
-# library("future.apply")
-library("e1071")
-library("glmnet")
-library("xgboost")
-library("earth")
-library("dplyr")
-## only run this if necessary
-# devtools::install_github("benkeser/cvma")
-# library("cvma")
-## only run this if something has changed
-# install.packages("HVTN505_2019-4-25.tar.gz", type = "source", repos = NULL)
-library("HVTN505")
-library("kyotil")
-library("argparse")
-
-## set up code directory
-if (!is.na(Sys.getenv("RSTUDIO", unset = NA))) { # if running locally
-  code_dir <- "code/"
-} else {
-  code_dir <- ""
-}
-num_cores <- parallel::detectCores()
-print(num_cores)
-
-## ---------------------------------------------------------------------------------
-## pre-process the data
-## ---------------------------------------------------------------------------------
-## read in the full dataset
-data("dat.505", package = "HVTN505")
-## read in the super learner variables
-data("var.super", package = "HVTN505") # even if there is a warning message, it still exists
-## note that "var.super" contains individual vars for vaccine-matched antigens,
-## and for vaccine-mismatched antigens, has either individual var (if only one)
-## or PC1 and/or MDW (only PC1 if cor(PC1, MDW) > 0.9)
-
-## scale vaccine recipients to have mean 0, sd 1 for all vars
-for (a in var.super$varname) {
-  dat.505[[a]] <- scale(dat.505[[a]], center = mean(dat.505[[a]][dat.505$trt == 1]), scale = sd(dat.505[[a]][dat.505$trt == 1]))
-  dat.505[[a%.%"_bin"]] <- scale(dat.505[[a%.%"_bin"]], center = mean(dat.505[[a%.%"_bin"]][dat.505$trt == 1]), scale = sd(dat.505[[a%.%"_bin"]][dat.505$trt == 1]))
-}
-for (a in c("age", "BMI", "bhvrisk")) {
-  dat.505[[a]] <- scale(dat.505[[a]], center = mean(dat.505[[a]][dat.505$trt == 1]), scale = sd(dat.505[[a]][dat.505$trt == 1]))
-}
-
-## set up X, Y for super learning
-X_markers <- dat.505 %>% 
-  select(var.super$varname, paste0(var.super$varname, "_bin"))
-
+```{r run-assays-with-small-lib, eval = FALSE}
 ## only include the following variable sets:
 assays <- unique(var.super$assay)
 antigens <- unique(var.super$antigen)
@@ -1261,9 +1208,9 @@ var_set_matrix <- rbind(var_set_none, var_set_igg_iga, var_set_igg3, var_set_tce
                         var_set_igg_iga_igg3_fxab, var_set_tcells_fxab,
                         var_set_all,
                         var_set_igg3_fxab, var_set_igg_iga_tcells_fxab, var_set_igg3_tcells_fxab)
-# edit the next line to run locally; set job_id manually to each of 1--14
-job_id <- as.numeric(Sys.getenv("SLURM_ARRAY_TASK_ID"))
-this_var_set <- var_set_matrix[job_id, ]
+for (i in 1:14) {
+  job_id <- i
+  this_var_set <- var_set_matrix[job_id, ]
 cat("\n Running ", var_set_names[job_id], "\n")
 
 X_markers_varset <- X_markers %>% 
@@ -1308,7 +1255,8 @@ fits <- parallel::mclapply(seeds, FUN = run_cv_sl_once, Y = Y_vaccine, X_mat = X
                            vimp = FALSE,
                            mc.cores = num_cores
 )
-saveRDS(fits, paste0("sl_fits_varset_", var_set_names[job_id], ".rds"))
+## name the object so that we can refer to it later
+}
 ```
 
 ## Results
@@ -1324,23 +1272,10 @@ The following code compiles results and creates plots, and must be run after all
 ## --------------------------------------------------------------------------------------------------------------------------------------
 ## set up directories, load required packages
 ## --------------------------------------------------------------------------------------------------------------------------------------
-library("SuperLearner")
 library("cvAUC")
 library("tidyr")
-library("dplyr")
 library("cowplot")
-# install if anything has changed
-#  install.packages("~/Projects/UW/vimp_1.3.0.tar.gz", repos = NULL, type = "source")
-library("vimp")
-library("HVTN505")
-library("kyotil")
 method <- "method.CC_nloglik" # since SuperLearner relies on this to be in GlobalEnv
-source("code/plot_assays.R")
-source("code/utils.R")
-source("code/sl_screens.R")
-
-results_dir <- "results/"
-plots_dir <- "plots/"
 
 # The palette with black:
 cbbPalette <- c("#000000", "#E69F00", "#56B4E9", "#009E73", "#F0E442", "#0072B2", "#D55E00", "#CC79A7")
@@ -1360,6 +1295,7 @@ var_set_names <- c("1_baseline_exposure", "2_igg_iga", "3_igg3","4_tcells", "5_f
                    "6_igg_iga_igg3", "7_igg_iga_tcells", "8_igg_iga_igg3_tcells", 
                    "9_igg_iga_igg3_fxab", "10_tcells_fxab",
                    "11_all")
+## objects are created above
 for (i in 1:length(var_set_names)) {
   eval(parse(text = paste0("sl_fits_varset_", var_set_names[i], " <- readRDS(paste0(results_dir, 'sl_fits_varset_', var_set_names[i], '.rds'))")))
 }
@@ -1759,10 +1695,266 @@ We ran the Super Learner algorithm for each of the 11 variable sets defined in S
 
 In Figure \ref{fig:cv_auc}, we see improved performance of the Super Learner when including marker variables compared to baseline risk variables only. Indeed, the Super Learner using only baseline variables and no markers has a cross-validated AUC of 0.58, and is the second-lowest cross-validated AUC: this confirms our hypothesis that using vaccine response marker variables improves prediction performance. The ordering of predictive performance fits our hypothesis that multiple types of immune response markers improve prediction: using no markers results in the poorest prediction performance (though the group of functional antibodies does not appear to result in any improvement), while using larger sets of markers tends to result in improved prediction performance. Our proposed estimator of HIV-1 infection risk among vaccinees, the cross-validated Super Learner, has an estimated AUC of 0.748 based on all markers, with a 95\% confidence interval of [0.697, 0.799]. This is a marked improvement over the Super Learner based on only the baseline risk variables, with an estimated AUC of 0.58 [0.517, 0.643].
 
+AUC FIGURE HERE
+
 In Figure \ref{fig:cv_r2}, we see that there is substantial estimated variability in the cross-validated $R^2$ values: this is due to the small variance of the outcome in these data, resulting in efficient influence function-based standard errors that are large relative to the point estimates. We see that, in general, the cross-validated $R^2$ is not large for any variable set, with the largest cross-validated $R^2$ estimated to be 0.11 when only all markers are considered.
+
+R-SQUARED FIGURE HERE
 
 
 ### Variable Importance Analysis
 
+We estimated the variable importance for 10 groups: all marker variables, IgG + IgA, IgG3, T cells, functional antibodies, IgG + IgA and IgG3, IgG + IgA and T cells, IgG + IgA and IgG3 and T cells, IgG + IgA and IgG3 and functional antibodies, and T cells and functional antibodies. In each case, we used the cross-validated Super Learner predictions from the analysis based on using the appropriate set of marker variables and baseline risk variables as our estimate of the full regression function; we then used the cross-validated Super Learner based on the baseline risk variables only to define the reduced regression function. This defines variable importance as the improvement in prediction performance from including a group of marker variables relative to including baseline variables only. 
+
+The results based on cross-validated AUC are presented in Figure \ref{fig:vimp_auc}. Here, we see that using the group of all marker variables results in an estimated increase in cross-validated AUC of nearly 0.2 over using the baseline risk variables only. Interestingly, the groups of IgG, IgA, IgG3, and T cell markers; IgG, IgA, and T cell markers; and all marker variables have estimated equivalent prediction performance. The next most important group appears to be those markers measured in T cells and functional antibody assays, with an estimated increase in cross-validated AUC of approximately 0.15 compared to using baseline risk variables only. Marker variables measured by T cell assays may be the most important individual group of markers, judging from the large importance of the T cells group alone and the fact that any group containing T cells has large estimated importance relative to the baseline risk variables. The analysis also shows that both antibodies and T cells are needed to optimize predictions: performance substantially improves adding binding antibodies (IgG, IgA, IgG3) to T cells. Adding all of the distinct antibody variable groups improves prediction performance compared to leaving any of the antibody groups out of the prediction algorithm. 
+
+AUC FIGURE HERE
+
+We additionally measured the importance of each individual variable within the assay and antigen groups: these results are presented in the Appendix.
+
 
 ## Conclusions
+
+In this analysis, we developed a model that predicts HIV-1 infection in vaccinees from month 7 marker variables and baseline risk variables. This model employs nested cross-validation to combine a flexible library of individual learners into a prediction algorithm that admits desirable asymptotic properties: namely, that the resulting cross-validated estimator is asymptotically guaranteed to have the same risk as the oracle estimator. We saw that the cross-validated AUC for this estimator using all marker variables was 0.748 [0.697, 0.799]. 
+
+Based on a variable importance analysis using the difference in cross-validated AUCs, we see that: (i) adding IgG and IgA variables only to baseline variables results in improved prediction performance; (ii) adding functional antibody variables and IgG3 variables to IgG and IgA variables and baseline variables results in improved prediction performance over adding IgG and IgA variables alone to baseline variables; (iii) adding IgG3 variables only to baseline variables results in even more improved prediction performance; (iv) adding T cell variables only results in the largest increase in prediction performance among all individual groups; and (v) that combining T cell and antibody variables together results in a further incremental improvement over T cells alone, but only if all antibody classes are present.
+
+The main limitation of this analysis is that, due to the small number of events, cross-validated $R^2$ appears to be a poor estimator both of prediction performance and of variable importance. This is in line with previous work suggesting that $R^2$ may not always be appropriate for rare binary endpoints. We suspect that with a larger number of events the behavior of the $R^2$ estimators, and the conclusions drawn from using cross-validated $R^2$ to define both prediction performance and variable importance, would be more in line with the conclusions drawn from using cross-validated AUC.
+
+## Appendix
+
+Code to reproduce the full Super Learning analysis:
+```{r run-full-sl, eval = FALSE}
+## load required libraries and functions
+library("methods")
+library("SuperLearner")
+# library("future")
+# library("future.apply")
+library("e1071")
+library("glmnet")
+library("xgboost")
+library("earth")
+library("dplyr")
+## only run this if necessary
+# devtools::install_github("benkeser/cvma")
+# library("cvma")
+## only run this if something has changed
+# install.packages("HVTN505_2019-4-9.tar.gz", type = "source", repos = NULL)
+library("HVTN505")
+library("kyotil")
+library("argparse")
+
+## set up code directory
+if (!is.na(Sys.getenv("RSTUDIO", unset = NA))) { # if running locally
+  code_dir <- "code/"
+  # plan("sequential")
+} else {
+  code_dir <- ""
+  # plan("multicore")
+}
+num_cores <- parallel::detectCores()
+print(num_cores)
+
+## ---------------------------------------------------------------------------------
+## pre-process the data
+## ---------------------------------------------------------------------------------
+## read in the full dataset
+data("dat.505", package = "HVTN505")
+## read in the super learner variables
+data("var.super", package = "HVTN505") # even if there is a warning message, it still exists
+## note that "var.super" contains individual vars for vaccine-matched antigens,
+## and for vaccine-mismatched antigens, has either individual var (if only one)
+## or PC1 and/or MDW (only PC1 if cor(PC1, MDW) > 0.9)
+
+## scale vaccine recipients to have mean 0, sd 1 for all vars
+for (a in var.super$varname) {
+  dat.505[[a]] <- scale(dat.505[[a]], center = mean(dat.505[[a]][dat.505$trt == 1]), scale = sd(dat.505[[a]][dat.505$trt == 1]))
+  dat.505[[a%.%"_bin"]] <- scale(dat.505[[a%.%"_bin"]], center = mean(dat.505[[a%.%"_bin"]][dat.505$trt == 1]), scale = sd(dat.505[[a%.%"_bin"]][dat.505$trt == 1]))
+}
+for (a in c("age", "BMI", "bhvrisk")) {
+  dat.505[[a]] <- scale(dat.505[[a]], center = mean(dat.505[[a]][dat.505$trt == 1]), scale = sd(dat.505[[a]][dat.505$trt == 1]))
+}
+
+## set up X, Y for super learning
+X_markers <- dat.505 %>% 
+  select(var.super$varname, paste0(var.super$varname, "_bin"))
+X_exposure <- dat.505 %>% 
+  select(age, BMI, bhvrisk)
+X <- data.frame(trt = dat.505$trt, X_exposure, X_markers)
+weights <- dat.505$wt
+Y <- dat.505$case
+vaccinees <- cbind.data.frame(Y, weights, X) %>% 
+  filter(trt == 1) %>% 
+  select(-trt)
+Y_vaccine <- vaccinees$Y
+weights_vaccine <- vaccinees$weights
+X_vaccine <- vaccinees %>% 
+  select(-Y, -weights)
+
+V_outer <- 5
+V_inner <- length(Y_vaccine) - 1 
+## ---------------------------------------------------------------------------------
+## run super learner, with leave-one-out cross-validation and all screens
+## do 10 random starts, average over these
+## use assay groups as screens
+## ---------------------------------------------------------------------------------
+## ensure reproducibility
+set.seed(4747)
+seeds <- round(runif(10, 1000, 10000)) # average over 10 random starts
+fits <- parallel::mclapply(seeds, FUN = run_cv_sl_once, Y = Y_vaccine, X_mat = X_vaccine, family = "binomial",
+              obsWeights = weights_vaccine,
+              sl_lib = SL_library_with_assay_groups, # this comes from sl_screens.R
+              method = "method.CC_nloglik",
+              cvControl = list(V = V_outer, stratifyCV = TRUE),
+              innerCvControl = list(list(V = V_inner)),
+              vimp = FALSE,
+              mc.cores = num_cores
+)
+saveRDS(fits, "sl_fits.rds")
+```
+
+Code to reproduce the full variable importance analysis:
+```{r run-assays, eval = FALSE}
+## load required libraries and functions
+library("methods")
+library("SuperLearner")
+# library("future")
+# library("future.apply")
+library("e1071")
+library("glmnet")
+library("xgboost")
+library("earth")
+library("dplyr")
+## only run this if necessary
+# devtools::install_github("benkeser/cvma")
+# library("cvma")
+## only run this if something has changed
+# install.packages("HVTN505_2019-4-25.tar.gz", type = "source", repos = NULL)
+library("HVTN505")
+library("kyotil")
+library("argparse")
+
+## set up code directory
+if (!is.na(Sys.getenv("RSTUDIO", unset = NA))) { # if running locally
+  code_dir <- "code/"
+} else {
+  code_dir <- ""
+}
+num_cores <- parallel::detectCores()
+print(num_cores)
+
+## ---------------------------------------------------------------------------------
+## pre-process the data
+## ---------------------------------------------------------------------------------
+## read in the full dataset
+data("dat.505", package = "HVTN505")
+## read in the super learner variables
+data("var.super", package = "HVTN505") # even if there is a warning message, it still exists
+## note that "var.super" contains individual vars for vaccine-matched antigens,
+## and for vaccine-mismatched antigens, has either individual var (if only one)
+## or PC1 and/or MDW (only PC1 if cor(PC1, MDW) > 0.9)
+
+## scale vaccine recipients to have mean 0, sd 1 for all vars
+for (a in var.super$varname) {
+  dat.505[[a]] <- scale(dat.505[[a]], center = mean(dat.505[[a]][dat.505$trt == 1]), scale = sd(dat.505[[a]][dat.505$trt == 1]))
+  dat.505[[a%.%"_bin"]] <- scale(dat.505[[a%.%"_bin"]], center = mean(dat.505[[a%.%"_bin"]][dat.505$trt == 1]), scale = sd(dat.505[[a%.%"_bin"]][dat.505$trt == 1]))
+}
+for (a in c("age", "BMI", "bhvrisk")) {
+  dat.505[[a]] <- scale(dat.505[[a]], center = mean(dat.505[[a]][dat.505$trt == 1]), scale = sd(dat.505[[a]][dat.505$trt == 1]))
+}
+
+## set up X, Y for super learning
+X_markers <- dat.505 %>% 
+  select(var.super$varname, paste0(var.super$varname, "_bin"))
+
+## only include the following variable sets:
+assays <- unique(var.super$assay)
+antigens <- unique(var.super$antigen)
+# 1. None (baseline variables only)
+var_set_none <- rep(FALSE, ncol(X_markers))
+# 2. IgG + IgA (all antigens)
+var_set_igg_iga <- get_nms_group_all_antigens(X_markers, assays = c("IgG", "IgA"), assays_to_exclude = "IgG3")
+# 3. IgG3
+var_set_igg3 <- get_nms_group_all_antigens(X_markers, assays = "IgG3")
+# 4. T cells (all antigens)
+var_set_tcells <- get_nms_group_all_antigens(X_markers, assays = c("CD4", "CD8"))
+# 5. Fx Ab (all antigens)
+var_set_fxab <- get_nms_group_all_antigens(X_markers, assays = c("phago", "R2a", "R3a"))
+# 6. 1+2+3
+var_set_igg_iga_igg3 <- get_nms_group_all_antigens(X_markers, assays = c("IgG", "IgA", "IgG3"))
+# 7. 1+2+4
+var_set_igg_iga_tcells <- get_nms_group_all_antigens(X_markers, assays = c("IgG", "IgA", "CD4", "CD8"), assays_to_exclude = "IgG3") 
+# 8. 1+2+3+4
+var_set_igg_iga_igg3_tcells <- get_nms_group_all_antigens(X_markers, assays = c("IgG", "IgA", "IgG3", "CD4", "CD8"), assays_to_exclude = "IgG3") 
+# 9. 1+2+3+5
+var_set_igg_iga_igg3_fxab <- get_nms_group_all_antigens(X_markers, assays = c("IgG", "IgA", "IgG3", "phago", "R2a", "R3a"))
+# 10. 1+4+5
+var_set_tcells_fxab <- get_nms_group_all_antigens(X_markers, assays = c("CD4", "CD8", "phago", "R2a", "R3a"))
+# 11. All
+var_set_all <- rep(TRUE, ncol(X_markers))
+## 12--14: extra runs to get variable importance
+var_set_igg3_fxab <- get_nms_group_all_antigens(X_markers, assays = c("IgG3", "phago", "R2a", "R3a"))
+var_set_igg_iga_tcells_fxab <- get_nms_group_all_antigens(X_markers, assays = c("IgG", "IgA", "CD4", "CD8", "phago", "R2a", "R3a"), assays_to_exclude = "IgG3")
+var_set_igg3_tcells_fxab <- get_nms_group_all_antigens(X_markers, assays = c("IgG3", "CD4", "CD8", "phago", "R2a", "R3a"))
+
+var_set_names <- c("1_baseline_exposure", "2_igg_iga", "3_igg3","4_tcells", "5_fxab",
+                   "6_igg_iga_igg3", "7_igg_iga_tcells", "8_igg_iga_igg3_tcells", 
+                   "9_igg_iga_igg3_fxab", "10_tcells_fxab",
+                   "11_all",
+                   "12_igg3_fxab", "13_igg_iga_tcells_fxab", "14_igg3_tcells_fxab")
+
+## set up a matrix of all 
+var_set_matrix <- rbind(var_set_none, var_set_igg_iga, var_set_igg3, var_set_tcells, var_set_fxab,
+                        var_set_igg_iga_igg3, var_set_igg_iga_tcells, var_set_igg_iga_igg3_tcells,
+                        var_set_igg_iga_igg3_fxab, var_set_tcells_fxab,
+                        var_set_all,
+                        var_set_igg3_fxab, var_set_igg_iga_tcells_fxab, var_set_igg3_tcells_fxab)
+# edit the next line to run locally; set job_id manually to each of 1--14
+job_id <- as.numeric(Sys.getenv("SLURM_ARRAY_TASK_ID"))
+this_var_set <- var_set_matrix[job_id, ]
+cat("\n Running ", var_set_names[job_id], "\n")
+
+X_markers_varset <- X_markers %>% 
+  select(names(X_markers)[this_var_set])
+
+X_exposure <- dat.505 %>% 
+  select(age, BMI, bhvrisk)
+X <- data.frame(trt = dat.505$trt, X_exposure, X_markers_varset)
+weights <- dat.505$wt
+Y <- dat.505$case
+vaccinees <- cbind.data.frame(Y, weights, X) %>% 
+  filter(trt == 1) %>% 
+  select(-trt)
+Y_vaccine <- vaccinees$Y
+weights_vaccine <- vaccinees$weights
+X_vaccine <- vaccinees %>% 
+  select(-Y, -weights)
+
+V_outer <- 5
+V_inner <- length(Y_vaccine) - 1 
+
+## get the SL library
+## if var_set_none, then don't need screens; otherwise do
+if (job_id == 1) {
+  sl_lib <- methods
+} else {
+  sl_lib <- SL_library
+}
+## ---------------------------------------------------------------------------------
+## run super learner, with leave-one-out cross-validation and all screens
+## do 10 random starts, average over these
+## ---------------------------------------------------------------------------------
+## ensure reproducibility
+set.seed(4747)
+seeds <- round(runif(10, 1000, 10000)) # average over 10 random starts
+fits <- parallel::mclapply(seeds, FUN = run_cv_sl_once, Y = Y_vaccine, X_mat = X_vaccine, family = "binomial",
+                           obsWeights = weights_vaccine,
+                           sl_lib = sl_lib, # this comes from sl_screens.R
+                           method = "method.CC_nloglik",
+                           cvControl = list(V = V_outer, stratifyCV = TRUE),
+                           innerCvControl = list(list(V = V_inner)),
+                           vimp = FALSE,
+                           mc.cores = num_cores
+)
+saveRDS(fits, paste0("sl_fits_varset_", var_set_names[job_id], ".rds"))
+```
